# agentic-dev-pipeline

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: mcp.json
.claude/commands/: basic-development.md  data-pipeline.md  hotfix.md  microservices-development.md  ml-ai-model.md  mobile-app.md  pipeline.md  status.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
archived-workflows/: README.md  basic-development.md  data-pipeline-development.md  hotfix-pipeline.md  microservices-development.md  ml-ai-model-development.md  mobile-app-development.md
configs/: pipeline.yaml
configs/agents/: performance-optimization-agent.yaml  security-audit-agent.yaml  ui-ux-design-agent.yaml
docker/: Dockerfile
docs/architecture/: system-architecture.md
docs/design/: agent-design.md  workflow-design.md
docs/guides/: best-practices.md  implementation.md  tool-integration.md  troubleshooting.md
docs/implementation/: system-implementation-plan.md  (+2 more)
examples/: README.md
k8s/: deployment.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
monitoring/: docker-compose.monitoring.yml  prometheus.yml
scripts/: health-check.sh  init_project.py  setup.sh
src/: config.py
templates/: projects.yaml
tests/: conftest.py  test_agents.py  test_api.py  test_orchestration.py  test_storage.py
(+70 files in other folders)
